<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#5B6D12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="9dp"
        android:text="@string/tekstas"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="640dp"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:text="@string/mygtukas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/consoleText"
        android:layout_width="411dp"
        android:layout_height="195dp"
        android:layout_marginBottom="250dp"
        android:background="@color/colorPrimary"
        android:text="@string/consoleconsoleconsoleconsoleconsoleconsoleconsoleconsol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="5dp"
        android:layout_height="230dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:background="#5B6D12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginBottom="230dp"
        android:background="#5B6D12"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="195dp"
        android:text="@string/Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/hp1"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="170dp"
        android:text="@string/hp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/dmg1"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="145dp"
        android:text="@string/dmg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/sleep1"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="120dp"
        android:text="@string/Sleeping"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/alive1"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="95dp"
        android:text="@string/Alive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/name2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="195dp"
        android:text="@string/Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3" />

    <TextView
        android:id="@+id/hp2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="170dp"
        android:text="@string/hp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3" />

    <TextView
        android:id="@+id/dmg2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="145dp"
        android:text="@string/dmg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3" />

    <TextView
        android:id="@+id/sleep2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="120dp"
        android:text="@string/Sleeping"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3" />

    <TextView
        android:id="@+id/alive2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="95dp"
        android:text="@string/Alive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3" />

</androidx.constraintlayout.widget.ConstraintLayout>